--- a/static/css/_home.less
+++ b/static/css/_home.less
@@ -8,27 +8,34 @@
 	background-image: url("../jpg/baner.png");
 	background-repeat: no-repeat;
 	background-position: center;
-    height: 420px;
-    
-    p {
-        text-align: left; 
-        display: inline;
-        position: relative;
-        top: 40%;
-        padding: 10px;
-        margin-left: 20px;
+    height: 320px;
+    padding-top: 100px;
+    .banner-pit {
         background-color: lightgrey;
-        font-size: 26px;
-        font-weight: 700;
-        line-height: 50px;
+        width: 200px;
+        margin-left: 20px;
+    	p {
+    		padding: 5px;
+	        text-align: center; 
+	        font-size: 26px;
+	        font-weight: 700;
+	        line-height: 50px;
+    	}
     }
-    p:nth-child(3) {
-	  font-size: 20px;
-	}
+    .banner-wypelnij {
+        background-color: lightgrey;
+        width: 275px;
+	    margin-left: 20px;
+    	p {
+    		text-align: center; 
+    		padding: 5px;
+		  	font-size: 20px;
+		  	font-weight: 700;
+		  	line-height: 50px;
+		}
+    }
     #action-button {
     	text-align: center;
-    	position: relative;
-    	top: 50%;
     	a {
     		text-decoration: none;
     	}
