--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,12 @@
 	<div class="container">
 	
 		<div id="banner">
-		
-			<p>PIT i kawa?</p></br>
+			
+			<div class="banner-pit">
+			<p>PIT i kawa?</p></div>
+			<div class="banner-wypelnij">
 			<p>Wypełnij PIT przy kawie</p>
+			</div>
 			<div id="action-button">
 				<a href="{{ url_for('panel') }}" title="Rozpocznij przepisywanie PITa" >
 					<input type="submit" value="Przepisz PIT">
