--- a/static/css/_pitO.less
+++ b/static/css/_pitO.less
@@ -194,4 +194,23 @@
 	   }
 	}
 }
+#pit_o_e1_kwoty {
+	.kwota_podatnik {
+		float: left;
+		width: 362px;
+		height: 35px;
+		margin-left: 212px;
+		border-top: solid;
+		border-left: solid;
+		border-width: 1px;
+	}
+	.kwota_malzonek {
+		float: left;
+		width: 362px;
+		height: 35px;
+		border-top: solid;
+		border-left: solid;
+		border-width: 1px;
+	}
+}
 
