--- a/static/css/_home.css
+++ b/static/css/_home.css
@@ -2,38 +2,17 @@
                 Banner
 ====================================*/
 #banner {
-  background-image: url("../jpg/baner.png");
+  margin: 25px 0;
+  background-image: url('../jpg/ship-banner.jpg');
+  width: 100%;
+  height: 50vmin;
+  background-size: 100%;
   background-repeat: no-repeat;
-  background-position: center;
-  height: 320px;
-  padding-top: 100px;
-}
-#banner .banner-pit {
-  background-color: lightgrey;
-  width: 200px;
-  margin-left: 20px;
-}
-#banner .banner-pit p {
-  padding: 5px;
-  text-align: center;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 50px;
-}
-#banner .banner-wypelnij {
-  background-color: lightgrey;
-  width: 275px;
-  margin-left: 20px;
-}
-#banner .banner-wypelnij p {
-  text-align: center;
-  padding: 5px;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 50px;
 }
 #banner #action-button {
   text-align: center;
+  position: relative;
+  top: 50%;
 }
 #banner #action-button a {
   text-decoration: none;
@@ -58,30 +37,49 @@
                 Content
 ====================================*/
 .tille1 {
-  height: 100%;
+  margin: 25px 0;
+  width: 100%;
+  text-align: left;
+}
+.tille1 h1 {
+  font-size: 26px;
 }
 .tille1 span {
-  font-size: 24px;
+  font-size: 20px;
+}
+.tille1 p {
+  font-size: 20px;
 }
 .tille2 {
-  height: 100%;
-  padding: 20px;
+  width: 100%;
+  font-size: 16px;
+  padding: 0 0 0 20px;
 }
 .tille2 ol {
   line-height: 30px;
 }
+.tille2 ol ul {
+  margin: 0 0 0 50px;
+}
 /* ====================================
                 Contact
 ====================================*/
-.contact-form p span {
+.contact-form {
+  margin: 25px 0;
+  text-align: left;
+}
+.contact-form h3 {
+  line-height: 30px;
+}
+.contact-form h3 span {
   font-weight: 600;
   opacity: 0.75;
 }
-.contact-form p span a {
+.contact-form h3 span a {
   text-decoration: none;
   color: #ff5722;
 }
-.contact-form p span:hover {
+.contact-form h3 span:hover {
   opacity: 1;
   transition: 0.5s;
 }
