--- a/static/css/_panel.css
+++ b/static/css/_panel.css
@@ -1,9 +1,14 @@
+form {
+    width: 100%;
+	margin: auto;
+}
+
 #tabelka {
 	padding-top: 25px;
 	padding-bottom: 25px;
 }
 select {
-	width: 200px;
+	width: 95%;
 	font-size: 16px;
 	margin: 5px;
 	padding: 5px;
@@ -11,30 +16,32 @@ select {
 #internet,
 #jeden-procent {
 	margin: 0;
-	width: 187px;
+	width: 95%;
 	font-size: 16px;
 	margin: 5px;
 	padding: 5px;
 }
 #cel {
 	margin: 0;
-	width: 235px;
+	width: 95%;
 	font-size: 16px;
 	margin: 5px;
 	padding: 5px;
 }
 fieldset {
-	margin-top: 5px;
-	margin-bottom: 5px;
+    width: 55%;
+	margin: 5px;
 	background-color: white;
 }
-fieldset:hover {
-	background-color: #dbdbdb;
-}
 legend {
-	background-color: #F6F4E7;
 	font-size: 20px;
 	font-weight: 600;
+	padding: 5px;
+}
+#tabelka p {
+    font-size: 16px;
+    text-align: left;
+    margin: 5px;
 }
 a {
    	text-decoration: none;
@@ -58,44 +65,3 @@ a {
  	background-color: #c73001;
  	transition: 0.5s;
  }
-#pit11numberOne,
-#pit11NumberTwo,
-#pit11NumberThree,
-#pit11NumberOneWife,
-#pit11NumberTwoWife, 
-#pit11NumberThreeWife,
-#buttonToAction {
- 	display: none;
-}
-.frameOutside {
-	width: 50px;
-	height: 50px;
-	background-color: black;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	float: left;
-	border: 2px solid;
-	font-size: 30px;
-	font-weight: 700;
-	text-align: center;
-}
-.frameOutside > .frameInside {
-	background-color: white;
-	margin: 5px;
-	width: 40px;
-	height: 40px;
-}
-.whosPit {
-	width: 150px;
-	height: 45px;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	float: left;
-	border-top: 2px solid;
-	border-right: 2px solid;
-	border-bottom: 2px solid;
-	font-size: 30px;
-	font-weight: 700;
-	padding-top: 5px;
-	text-align: center;
-}
