--- a/templates/home.html
+++ b/templates/home.html
@@ -6,12 +6,13 @@
 	<div class="container">
 	
 		<div id="banner">
-			
+			<!-- 
 			<div class="banner-pit">
 			<p>PIT i kawa?</p></div>
 			<div class="banner-wypelnij">
 			<p>Wypełnij PIT przy kawie</p>
-			</div>
+			</div> -->
+            <!-- <img src="../static/jpg/baner 8.jpg" alt="ship"/> -->
 			<div id="action-button">
 				<a href="{{ url_for('panel') }}" title="Rozpocznij przepisywanie PITa" >
 					<input type="submit" value="Przepisz PIT">
@@ -22,14 +23,14 @@
 
 		<div class="tille1">
 		
-			<h1>Dostałeś PIT-11 od pracodawcy, <span>a nie wiesz jak wypełnić deklarację podatkową PIT-37?</span></h1>
-			<p>Ta strona jest dla Ciebie! Jedynie co musisz zrobić to przepisać PIT.</p>
+			<h1>Dostałeś PIT-11 od pracodawcy, <span>a nie wiesz jak wypełnić deklarację podatkową PIT-37?<br>
+                Ta strona jest dla Ciebie! Jedynie co musisz zrobić to przepisać PIT.</span></h1>
+			
 			
 		</div> <!-- /tille1 -->
 		
 		<div class="tille2">
 		
-			<hr>
 		
 			<h2>Instrukcja:</h2>
 			<ol>
@@ -51,7 +52,6 @@
 				<li>Cieszysz się wypełnionym pitem</li>
 			</ol>
 			
-			<hr>
 		
 		</div> <!-- /tille2 -->
 			
@@ -62,10 +62,11 @@
 			
 			<div class="contact-form">
 				<h3 class="phone">Masz pytanie? <br>
-				Coś nie działa jak powinno?
+				Coś nie działa jak powinno? <br>
+                Skontaktuj się ze mną mailowo →  <span>
+				<a href="mailto:pawels44@gmail.com">pawels44@gmail.com</a></span>
 				</h3>
-				<p> Skontaktuj się ze mną mailowo →  <span>
-				<a href="mailto:pawels44@gmail.com">pawels44@gmail.com</a></span></p>
+				<p> </p>
 			</div>
 
 		</div>
