--- a/static/css/stare/pit37_nowy.css
+++ b/static/css/stare/pit37_nowy.css
@@ -13,51 +13,29 @@
   font-size: 10px;
 }
 .container h3 {
-  font-size: 15px;
-  padding: 4px;
+  font-size: 16px;
+  padding: 8px;
 }
 .container p {
-  font-size: 13px;
+  font-size: 14px;
   text-align: center;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 .container .borders {
-  border: 2px solid black;
-}
-button {
-  float: right;
-  width: 17%;
-  font-size: 16px;
-  padding: 10px;
-  cursor: pointer;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-bottom: 20px;
-  background-color: white;
-  color: black;
   border: 1px solid black;
-  font-weight: bold;
-}
-button:hover {
-  transition: 0.65s;
-  color: white;
-  background-color: #ff5722;
-  border: 1px solid white;
 }
 .endPage {
   width: 20%;
   float: right;
-  margin-top: 15px;
-  margin-bottom: 25px;
+  margin-top: 25px;
   text-align: center;
   font-size: 16px;
 }
 .endPage2 {
   width: 20%;
   float: left;
-  margin-top: 15px;
-  margin-bottom: 25px;
+  margin-top: 25px;
   text-align: center;
   font-size: 16px;
 }
@@ -72,14 +50,11 @@ button:hover {
   float: left;
   padding: 10px;
 }
-.poltax_header {
-  float: left;
-}
-.poltax_header .poltax37 {
+.poltax37 {
   float: left;
   width: 10%;
 }
-.poltax_header .poltax37_two {
+.poltax37_two {
   float: left;
   width: 90%;
   font-size: 12px;
@@ -105,14 +80,14 @@ button:hover {
   width: 19%;
   border-left: 1px solid black;
   border-top: 1px solid black;
-  min-height: 42px;
+  min-height: 45px;
 }
 .jedno_pole {
   float: left;
   width: 38%;
   border-left: 1px solid black;
   border-top: 1px solid black;
-  min-height: 42px;
+  min-height: 45px;
 }
 .pole_dlugie1 {
   float: left;
@@ -122,7 +97,7 @@ button:hover {
   border-top: 1px solid black;
   padding-top: 2px;
   padding-bottom: 3px;
-  min-height: 42px;
+  min-height: 45px;
 }
 /*----------------------------------------------------------------
 							Page 1
@@ -144,8 +119,7 @@ button:hover {
   height: 80px;
 }
 .three37 {
-  padding: 3px;
-  background-color: #ff5722;
+  padding: 5px;
 }
 .three37 .name1 {
   font-size: 26px;
@@ -186,8 +160,8 @@ button:hover {
   width: 50%;
 }
 .podstawyPrawne {
-  font-size: 12px;
-  padding: 2px;
+  font-size: 14px;
+  padding: 5px;
 }
 .podstawyPrawne .pod {
   float: left;
@@ -200,118 +174,111 @@ button:hover {
   padding: 5px;
 }
 .wybor37 {
-  padding: 3px;
+  padding: 5px;
 }
 .wybor37 .form1 {
   float: left;
   width: 25%;
   padding: 5px;
 }
-.wybor37 .form1 p {
-  text-align: left;
-}
 .wybor37 .form2 {
-  width: 100%;
   padding: 5px;
-}
-.wybor37 .form2 p {
-  text-align: left;
 }
 .a37 .miejsceIcel {
   width: 96%;
   margin-left: 4%;
   border-left: 1px solid black;
   border-top: 1px solid black;
-  min-height: 40px;
 }
-.nazwisko11 {
+.b1_37 .nazwisko11_37,
+.b2_37 .nazwisko11_37 {
   margin-left: 4%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 33%;
   float: left;
-  min-height: 40px;
 }
-.imie12 {
+.b1_37 .imie12_37,
+.b2_37 .imie12_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 35%;
   float: left;
-  min-height: 40px;
 }
-.data13 {
+.b1_37 .data13_37,
+.b2_37 .data13_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 28%;
   float: left;
-  min-height: 40px;
 }
-.kraj14 {
+.b1_37 .kraj14_37,
+.b2_37 .kraj14_37 {
   margin-left: 4%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 25%;
   float: left;
-  min-height: 40px;
 }
-.wojewodztwo15 {
+.b1_37 .wojewodztwo15_37,
+.b2_37 .wojewodztwo15_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 33%;
   float: left;
-  min-height: 40px;
 }
-.powiat16 {
+.b1_37 .powiat16_37,
+.b2_37 .powiat16_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 38%;
   float: left;
-  min-height: 40px;
 }
-.gmina17 {
+.b1_37 .gmina17_37,
+.b2_37 .gmina17_37 {
   margin-left: 4%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 26%;
   float: left;
-  min-height: 40px;
 }
-.ulica18 {
+.b1_37 .ulica18_37,
+.b2_37 .ulica18_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 50%;
   float: left;
-  min-height: 40px;
 }
-.dom19,
-.lokal20 {
+.b1_37 .dom19_37,
+.b2_37 .dom19_37,
+.b1_37 .lokal20_37,
+.b2_37 .lokal20_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 10%;
   float: left;
-  min-height: 40px;
 }
-.miejscowosc21 {
+.b1_37 .miejscowosc21_37,
+.b2_37 .miejscowosc21_37 {
   margin-left: 4%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 42%;
   float: left;
-  min-height: 40px;
 }
-.kod22 {
+.b1_37 .kod22_37,
+.b2_37 .kod22_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 15%;
   float: left;
-  min-height: 40px;
 }
-.poczta23 {
+.b1_37 .poczta23_37,
+.b2_37 .poczta23_37 {
   border-top: 1px solid black;
   border-left: 1px solid black;
   width: 39%;
   float: left;
-  min-height: 40px;
 }
 /*----------------------------------------------------------------
 							Page 2
@@ -367,19 +334,19 @@ button:hover {
   border-left: 1px solid black;
   border-top: 1px solid black;
   padding: 5px;
-  min-height: 42px;
+  min-height: 45px;
 }
 .pustak2 {
   float: left;
   margin-left: 4%;
   width: 2%;
-  min-height: 42px;
+  min-height: 45px;
   border-left: 1px solid black;
 }
 .pole_dlugie3 {
   width: 56%;
   float: left;
-  min-height: 42px;
+  min-height: 45px;
   border-left: 1px solid black;
   border-top: 1px solid black;
   font-size: 9px;
@@ -388,57 +355,35 @@ button:hover {
   float: left;
   margin-left: 4%;
   width: 2%;
-  min-height: 42px;
+  min-height: 45px;
   border-left: 1px solid black;
 }
 .pustak4 {
   float: left;
   width: 2%;
-  min-height: 42px;
+  min-height: 45px;
   border-top: 1px solid black;
 }
 .pole_dlugie4 {
   width: 54%;
   float: left;
-  min-height: 42px;
+  min-height: 45px;
   border-left: 1px solid black;
   border-top: 1px solid black;
 }
 /*----------------------------------------------------------------
 							Page 3
 ----------------------------------------------------------------*/
-.pit_uz_b_tile {
-  float: left;
-  width: 30%;
-  min-height: 45px;
-}
-#pit_uz_table_1 {
-  width: 96%;
-  margin-left: 4%;
-  border-collapse: collapse;
-}
-#pit_uz_table_1 td {
-  border-left: 1px solid black;
-  border-top: 1px solid black;
-  padding: 1px;
-  width: 20%;
-}
-#pit_uz_table_1 tr {
-  height: 35px;
-}
-#pit_uz_table_1 .table_one {
-  width: 60%;
-}
 .h_info {
   float: left;
   width: 72%;
-  min-height: 50px;
+  min-height: 55px;
 }
 .h_info130 {
   float: left;
   width: 28%;
   border-left: 1px solid black;
-  min-height: 50px;
+  min-height: 55px;
 }
 small {
   font-size: 8px;
@@ -449,21 +394,21 @@ small {
   width: 38%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .i_krs2 {
   float: left;
   width: 39%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .i_krs132 {
   float: left;
   width: 19%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .j_cel133 {
   float: left;
@@ -471,14 +416,14 @@ small {
   width: 77%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .j_cel134 {
   float: left;
   width: 19%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .j_cel135 {
   float: left;
@@ -486,14 +431,14 @@ small {
   margin-left: 4%;
   border-top: 1px solid black;
   border-left: 1px solid black;
-  min-height: 40px;
+  min-height: 42px;
 }
 .k_pit_first {
   margin-left: 4%;
 }
 .k_pit {
   float: left;
-  width: 9%;
+  width: 7%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   min-height: 84px;
@@ -507,7 +452,7 @@ small {
 }
 .k_pit2 {
   float: left;
-  width: 10%;
+  width: 9%;
   border-top: 1px solid black;
   border-left: 1px solid black;
   min-height: 84px;
@@ -582,4 +527,4 @@ small {
   min-height: 82px;
 }
 
-/*# sourceMappingURL=_pit37.css.map */
+/*# sourceMappingURL=pit37_nowy.css.map */
