--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,13 +15,12 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/_home.css') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/_pit.css') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/_panel.css') }}" />
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/_pit37.css') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/_pitO.css') }}" />
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/_pitUZ.css') }}" />
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/fontello.css') }}" />
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/_pit37.css') }}" />
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/_rwd.css') }}" />
 	
 	<script src="../static/js/_scripts.js"></script>
+	<script src="../static/js/pit 11 script.js"></script>
 	
 </head>
 
@@ -47,7 +46,7 @@
 	<footer>
 		<div class="container">
 			<div class="copy">
-				<script>document.write(new Date().getFullYear())</script> | Strona podatkowa &copy Dziękuję za wizytę! Paweł S.
+				<script>document.write(new Date().getFullYear())</script> | Strona podatkowa &copy; Dziękuję za wizytę! Paweł S.
 			</div>
 			<ul>
 				<li><a href="{{ url_for('home') }}" title="Strona główna">Strona główna</a></li>
@@ -57,8 +56,6 @@
 			<div style="clear: both;"></div>
 		</div>
 	</footer>
-	
-	
 
   </body>
 </html>
