--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,13 @@
 	<div class="container">
 	
 		<div id="banner">
-			<!-- 
+			<!--
 			<div class="banner-pit">
 			<p>PIT i kawa?</p></div>
 			<div class="banner-wypelnij">
 			<p>Wypełnij PIT przy kawie</p>
 			</div> -->
-            <!-- <img src="../static/jpg/baner 8.jpg" alt="ship"/> -->
+            <img src="../static/jpg/baner 2.png" alt="ship"/> 
 			<div id="action-button">
 				<a href="{{ url_for('panel') }}" title="Rozpocznij przepisywanie PITa" >
 					<input type="submit" value="Przepisz PIT">
