--- a/templates/panel.html
+++ b/templates/panel.html
@@ -52,7 +52,7 @@
 				<input id="jeden-procent" type="text" name="jeden_procent" maxlength="10" placeholder="KRS" /><br>
 				<input id="cel" type="text" name="cel" maxlength="35" placeholder="Cel szczegółowy" />
                 <p><strong>Nie wiesz na co przeznaczyć 1% podatku, moje propozycje:</strong></p>
-                <p>MiszczJoda 0000270809, dopisek Jacykowski, 3568</p>
+                <p>Gnida84 0000270809, dopisek Wojtas, 5543</p>
                 <p>Wikipedia 0000244732</p>
 			</fieldset>
 			
