--- a/static/css/_home.less
+++ b/static/css/_home.less
@@ -5,17 +5,22 @@
 ====================================*/
 
 #banner {
-    margin: 25px 0;
+    
+    margin: 25px 0 -40px 0;
+    /*
     background-image: url('../jpg/ship-banner.jpg');
     width: 100%;
     height: 50vmin;
     background-size: 100%;
     background-repeat: no-repeat;
-    
+    */
+    img {
+        width: 100%;
+    }
     #action-button {
     	text-align: center;
     	position: relative;
-    	top: 50%;
+    	top: -100px;
     	a {
     		text-decoration: none;
     	}
@@ -42,7 +47,7 @@
                 Content
 ====================================*/
 .tille1 {
-    margin: 25px 0;
+    margin: 0 0 25px 0;
     width: 100%;
     text-align: left;
     h1 {
